@@ -179,9 +179,9 @@ namespace traversal {
 	);
 
 	/* Functions that compute the distances:
-	 * - vertex-to-vertex	(Dijkstra)
-	 * - vertex-to-all		(Dijkstra)
-	 * - all-to-all			(Floyd-Warshall)
+	 * - node-to-node	(Dijkstra)
+	 * - node-to-all	(Dijkstra)
+	 * - all-to-all		(Floyd-Warshall)
 	 *
 	 * The distance from one vertex to another is defined as the number
 	 * of edges in the shortest path between the two.
@@ -200,12 +200,12 @@ namespace traversal {
 	 * of edges in the shortest path between the two.
 	 */
 
-	/// VERTEX-VERTEX
+	/// NODE-NODE
 
 	_new_ xudistance(const xxgraph<_new_> *G, node source, node target);
 	_new_ xudistance(const xxgraph<_new_> *G, node source, node target, size_t& n_paths);
 
-	/// VERTEX-ALL
+	/// NODE-ALL
 
 	void xudistance(const xxgraph<_new_> *G, node source, vector<_new_>& xudistances);
 	void xudistance(const xxgraph<_new_> *G, node source, vector<_new_>& xudistances, vector<size_t>& n_paths);
@@ -228,32 +228,41 @@ namespace traversal {
 	 * Its length is the number of edges in the path. Also, the number of vertices in it minus 1.
 	 */
 
-	/// VERTEX-VERTEX
+	/// NODE-NODE
 
+	// a shortest path from a node to another node
 	void xupath(const xxgraph<_new_> *G, node source, node target, node_path<_new_>& p);
-	void xupath(const xxgraph<_new_> *G, node source, node target, node_path_set<_new_>& ps);
 	void xupath(const xxgraph<_new_> *G, node source, node target, boolean_path<_new_>& p);
+
+	// all shortest paths from a node to another node
+	void xupath(const xxgraph<_new_> *G, node source, node target, node_path_set<_new_>& ps);
 	void xupath(const xxgraph<_new_> *G, node source, node target, boolean_path_set<_new_>& ps);
 
-	/// VERTEX-ALL
+	/// NODE-ALL
 
+	// a shortest path from all nodes to a single node
 	void xupath(const xxgraph<_new_> *G, node source, vector<node_path<_new_> >& ps);
-	void xupath(const xxgraph<_new_> *G, node source, vector<node_path_set<_new_> >& ps);
 	void xupath(const xxgraph<_new_> *G, node source, vector<boolean_path<_new_> >& ps);
+
+	// all shortest paths from all nodes to a single node
+	void xupath(const xxgraph<_new_> *G, node source, vector<node_path_set<_new_> >& ps);
 	void xupath(const xxgraph<_new_> *G, node source, vector<boolean_path_set<_new_> >& ps);
 
 	/// ALL-ALL
 
+	// a shortest path from all nodes to all other nodes
 	void xupaths(const xxgraph<_new_> *G, vector<vector<node_path<_new_> > >& ps);
-	void xupaths(const xxgraph<_new_> *G, vector<vector<node_path_set<_new_> > >& ps);
 	void xupaths(const xxgraph<_new_> *G, vector<vector<boolean_path<_new_> > >& ps);
+
+	// all shortest paths from all nodes to all other nodes
+	void xupaths(const xxgraph<_new_> *G, vector<vector<node_path_set<_new_> > >& ps);
 	void xupaths(const xxgraph<_new_> *G, vector<vector<boolean_path_set<_new_> > >& ps);
 
 	/// ------------------------------------------------------------
 	/// WEIGHTED FUNCTIONS (for directed/undirected weighted graphs)
 	/// ------------------------------------------------------------
 
-	/// VERTEX-VERTEX
+	/// NODE-NODE
 
 	/* (1): distance from source to target.
 	 * (2): idem, and the number of shortest paths.
@@ -264,7 +273,7 @@ namespace traversal {
 	template<class T>
 	T xwdistance(const xxgraph<T> *G, node source, node target, size_t& n_paths);
 
-	/// VERTEX-ALL
+	/// NODE-ALL
 
 	/* (1): distance from source to all other nodes in the graph.
 	 * (2): idem, and the number of shortest paths between them.
@@ -287,9 +296,9 @@ namespace traversal {
 	void xwdistances(const xxgraph<T> *G, vector<vector<T> >& ds, vector<vector<size_t> >& n_paths);
 
 	/* Functions that compute the paths:
-	 * - vertex-to-vertex	(Dijkstra)
-	 * - vertex-to-all		(Dijkstra)
-	 * - all-to-all			(Floyd-Warshall modified)
+	 * - node-to-node	(Dijkstra)
+	 * - node-to-all	(Dijkstra)
+	 * - all-to-all		(Floyd-Warshall modified)
 	 *
 	 * A path from vertex 'u' to vertex 'v' is defined as the shortest list of vertices
 	 * (u, ..., v) where '...' is a list of vertices v1, v2, ... , vn  such that v1 is a
@@ -299,48 +308,45 @@ namespace traversal {
 	 * Its length is the number of edges in the path. Also, the number of vertices in it minus 1.
 	 */
 
-	/// VERTEX-VERTEX
+	/// NODE-NODE
 
-	/* (1): one shortest path from source to target.
-	 * (2): all shortest paths from source to target.
-	*/
-
+	// a shortest path from a node to another node
 	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, node target, node_path<T>& p);
 	template<class T>
-	void xwpath(const xxgraph<T> *G, node source, node target, node_path_set<T>& ps);
-	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, node target, boolean_path<T>& p);
+
+	// all shortest paths from a node to another node (particular case of usage of BFS)
+	template<class T>
+	void xwpath(const xxgraph<T> *G, node source, node target, node_path_set<T>& ps);
 	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, node target, boolean_path_set<T>& ps);
 
-	/// VERTEX-ALL
+	/// NODE-ALL
 
-	/* (1): one shortest path from source to all other nodes in the graph.
-	 * (2): all shortest paths from source to all other nodes in the graph.
-	*/
-
+	// a shortest path from all nodes to a single node
 	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, vector<node_path<T> >& ps);
 	template<class T>
-	void xwpath(const xxgraph<T> *G, node source, vector<node_path_set<T> >& ps);
-	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, vector<boolean_path<T> >& ps);
+
+	// all shortest paths from all nodes to a single node
+	template<class T>
+	void xwpath(const xxgraph<T> *G, node source, vector<node_path_set<T> >& ps);
 	template<class T>
 	void xwpath(const xxgraph<T> *G, node source, vector<boolean_path_set<T> >& ps);
 
 	/// ALL-ALL
 
-	/* (1): one shortest path from all nodes in the graph to all other nodes in the graph.
-	 * (2): all shortest paths from all nodes in the graph to all other nodes in the graph.
-	*/
-
+	// a shortest path from all nodes to all other nodes
 	template<class T>
 	void xwpaths(const xxgraph<T> *G, vector<vector<node_path<T> > >& ps);
 	template<class T>
-	void xwpaths(const xxgraph<T> *G, vector<vector<node_path_set<T> > >& ps);
-	template<class T>
 	void xwpaths(const xxgraph<T> *G, vector<vector<boolean_path<T> > >& ps);
+
+	// all shortest paths from all nodes to all other nodes
+	template<class T>
+	void xwpaths(const xxgraph<T> *G, vector<vector<node_path_set<T> > >& ps);
 	template<class T>
 	void xwpaths(const xxgraph<T> *G, vector<vector<boolean_path_set<T> > >& ps);
 
